--- a/.github/workflows/validations.yaml
+++ b/.github/workflows/validations.yaml
@@ -62,6 +62,7 @@ jobs:
     runs-on: ubuntu-24.04
     permissions:
       contents: read
+      actions: write
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 #v4.2.2
         with:
