--- a/.github/workflows/update-apple-certs.yaml
+++ b/.github/workflows/update-apple-certs.yaml
@@ -12,6 +12,7 @@ jobs:
   update-certs:
     name: "Update embedded Apple certificates"
     runs-on: ubuntu-24.04
+    if: github.repository == 'anchore/quill' # only run for main repo
     permissions:
       contents: write
       pull-requests: write
@@ -27,11 +28,11 @@ jobs:
         run: make update-apple-certs
 
       - name: Generate GitHub token
-        uses: tibdex/github-app-token@3beb63f4bd073e61482598c45c71c1019b59b73a #v2.1.0
+        uses: actions/create-github-app-token@67018539274d69449ef7c02e8e71183d1719ab42 #v2.1.4
         id: generate-token
         with:
-          app_id: ${{ secrets.TOKEN_APP_ID }}
-          private_key: ${{ secrets.TOKEN_APP_PRIVATE_KEY }}
+          app-id: ${{ secrets.TOKEN_APP_ID }}
+          private-key: ${{ secrets.TOKEN_APP_PRIVATE_KEY }}
 
       - name: Create pull request
         uses: peter-evans/create-pull-request@271a8d0340265f705b14b6d32b9829c1cb33d45e #v7.0.8
