stop b64 encoding test binary payload
Signed-off-by: Will Murphy <willmurphyscode@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -44,4 +44,4 @@ cmd/quill/quill
 *.profile
 
 # Generated test binary for notarization testing
-cmd/quill/cli/commands/test_notarize_hello.b64
+cmd/quill/cli/commands/test_notarize_hello.macho
